; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/graphics-hook/extr_gl-capture.c_gl_shmem_capture_queue_copy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/graphics-hook/extr_gl-capture.c_gl_shmem_capture_queue_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i32*, i32* }

@NUM_BUFFERS = common dso_local global i32 0, align 4
@data = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@GL_PIXEL_PACK_BUFFER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"gl_shmem_capture_queue_copy\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"failed to bind pbo\00", align 1
@GL_READ_ONLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @gl_shmem_capture_queue_copy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gl_shmem_capture_queue_copy() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %45, %0
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @NUM_BUFFERS, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %48

7:                                                ; preds = %3
  %8 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @data, i32 0, i32 0), align 8
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32, i32* %8, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %44

14:                                               ; preds = %7
  %15 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @data, i32 0, i32 0), align 8
  %16 = load i32, i32* %1, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  store i32 0, i32* %18, align 4
  %19 = load i32, i32* @GL_PIXEL_PACK_BUFFER, align 4
  %20 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @data, i32 0, i32 2), align 8
  %21 = load i32, i32* %1, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @glBindBuffer(i32 %19, i32 %24)
  %26 = call i64 @gl_error(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %14
  br label %48

29:                                               ; preds = %14
  %30 = load i32, i32* @GL_PIXEL_PACK_BUFFER, align 4
  %31 = load i32, i32* @GL_READ_ONLY, align 4
  %32 = call i32* @glMapBuffer(i32 %30, i32 %31)
  store i32* %32, i32** %2, align 8
  %33 = load i32*, i32** %2, align 8
  %34 = icmp ne i32* %33, null
  br i1 %34, label %35, label %43

35:                                               ; preds = %29
  %36 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @data, i32 0, i32 1), align 8
  %37 = load i32, i32* %1, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %36, i64 %38
  store i32 1, i32* %39, align 4
  %40 = load i32, i32* %1, align 4
  %41 = load i32*, i32** %2, align 8
  %42 = call i32 @shmem_copy_data(i32 %40, i32* %41)
  br label %43

43:                                               ; preds = %35, %29
  br label %48

44:                                               ; preds = %7
  br label %45

45:                                               ; preds = %44
  %46 = load i32, i32* %1, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %1, align 4
  br label %3

48:                                               ; preds = %28, %43, %3
  ret void
}

declare dso_local i32 @glBindBuffer(i32, i32) #1

declare dso_local i64 @gl_error(i8*, i8*) #1

declare dso_local i32* @glMapBuffer(i32, i32) #1

declare dso_local i32 @shmem_copy_data(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
